# miracle-api-switch

./: AGENTS.md  CLAUDE.md  config.toml  settings.json
back-app/: README.md  pyproject.toml  requirements.txt
back-app/app/: __init__.py  app_context.py  main.py  models.py
back-app/app/api/: __init__.py  routes.py
back-app/app/core/: __init__.py  config.py  errors.py  responses.py  security.py
back-app/app/proxy/: __init__.py  manager.py  transformers.py
back-app/app/services/: agent_probe.py  cache_store.py  config_writer.py  provider_service.py  usage_service.py
back-app/miracle_api_switch_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
back-app/tests/: test_api.py  test_config_writer.py  test_transformers.py  test_usage_service.py
docs/: backend-design-dev.md  frontend-design-dev.md  overall-design.md
front-app/: README.md  backend-contract-notes.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
front-app/src/: App.vue  main.ts
front-app/src/api/: client.ts
front-app/src/components/: AgentSummaryCard.vue  AppButton.vue  AppDrawer.vue  AppFormField.vue  AppInput.vue  AppModal.vue  AppSegmented.vue  AppToasts.vue  AppToggle.vue  ConfigPathDrawer.vue  InfoTip.vue  LogoMark.vue  ProviderFormDrawer.vue  SectionCard.vue  StatusDot.vue
front-app/src/layouts/: AppShell.vue
front-app/src/router/: index.ts
front-app/src/stores/: agents.ts  app.ts  providers.ts  usage.ts
front-app/src/styles/: base.css
front-app/src/types/: api.ts
scripts/: start.sh  stop.sh
(+4 files in other folders)
